--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <li><a href="#about">About</a></li>
            </ul> <br><br>
           <h1>Project S.I.G.M.A.</h1>
-          <p>Project S.I.G.M.A. (Smart Inovative Geographically Manipulated Assistant) is a robot made to make tasks around the house easier for an elderly person, someone with disabilities, or anyone else. This is done </p>
+          <p>This is Concept Project S.I.G.M.A. (Smart Innovative Geographically Manipulated Assistant). Concept Project S.I.G.M.A. has the main goal of making daily tasks easier for senior citizens, people with disabilities, or others who need it. These tasks can range from bringing items to the user, to waking them up in the morning. The possibilities are endless, and will fulfill the user's desire.</p>
         </div>
     </body>
 </html>
