--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
     <head>
-        <title>Project S.I.G.M.A.</title>
+        <title>Concept PROJΣCT S.I.G.M.A.</title>
         <link rel="stylesheet" type="text/css" href="sigma.css">
         <script src = "code.js"></script>
     </head>
@@ -12,9 +12,9 @@
             <li><a href="#gallery">Gallery</a></li>
             <li><a href="#about">About</a></li>
            </ul> <br><br>
+          <h1>Concept PROJΣCT S.I.G.M.A.</h1>
           <img src= "20170403_152536_HDR.jpg">
-          <h1>Project S.I.G.M.A.</h1>
-          <p>This is Concept Project S.I.G.M.A. (Smart Innovative Geographically Manipulated Assistant). Concept Project S.I.G.M.A. has the main goal of making daily tasks easier for senior citizens, people with disabilities, or others who need it. These tasks can range from bringing items to the user, to waking them up in the morning. The possibilities are endless, and will fulfill the user's desire.</p>
+          <h2>This is Concept Project S.I.G.M.A. (Smart Innovative Geographically Manipulated Assistant). Concept Project S.I.G.M.A. has the main goal of making daily tasks easier for senior citizens, people with disabilities, or others who need it. These tasks can range from bringing items to the user, to waking them up in the morning. The possibilities are endless, and will fulfill the user's desire.</h2>
         </div>
     </body>
 </html>
