--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
     <head>
         <title>Concept PROJΣCT S.I.G.M.A.</title>
@@ -6,7 +5,7 @@
         <script src = "code.js"></script>
     </head>
     <body>
-      <div>
+      <div id = "intro">
           <ul>
             <li><a class="active" href="#home">Home</a></li>
             <li><a href="#gallery">Gallery</a></li>
@@ -19,7 +18,6 @@
                   <th><h2>This is Concept Project S.I.G.M.A. (Smart Innovative Geographically Manipulated Assistant). Concept Project S.I.G.M.A. has the main goal of making daily tasks easier for senior citizens, people with disabilities, or others who need it. These tasks can range from bringing items to the user, to waking them up in the morning. The possibilities are endless, and will fulfill the user's desire.</h2></th>
               </tr>
           </table>
-          
         </div>
     </body>
 </html>
