--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
     <head>
         <title>Concept PROJΣCT S.I.G.M.A.</title>
         <link rel="stylesheet" type="text/css" href="sigma.css">
-        <script src = "code.js"></script>
+        <script src = "sigma.js"></script>
     </head>
     <body>
       <div id = "intro">
           <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#gallery">Gallery</a></li>
-            <li><a href="#about">About</a></li>
+            <li><button class = "active" id = "home">Home</button></li>
+            <li><button id = "gallery">Gallery</button></li>
+            <li><button id= "about">About</button></li>
            </ul> <br><br>
           <h1>Concept PROJΣCT S.I.G.M.A.</h1>
+          <div id="galleryModal" class="modal">
+           <div class="modal-content">
+            <span class="galleryClose">&times;</span>
+            <p>Some text in the Modal..</p>
+           </div>
+          </div>
           <table>
               <tr>
                   <th><img src= "20170403_152536_HDR (2).jpg"></th>
