--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <h1>Concept PROJΣCT S.I.G.M.A.</h1>
           <div id="galleryModal" class="modal">
            <div class="modal-content">
-            <span class="galleryClose">&times;</span>
+            <span class="close">&times;</span>
             <p>Some text in the Modal..</p>
            </div>
           </div>
