--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
     <head>
         <title>Concept PROJΣCT S.I.G.M.A.</title>
         <link rel="stylesheet" type="text/css" href="sigma.css">
-        <script src = "sigma.js"></script>
     </head>
     <body>
+      <script src = "sigma.js"></script>
       <div id = "intro">
           <ul>
-            <li><button class = "active" id = "home">Home</button></li>
-            <li><button id = "gallery">Gallery</button></li>
-            <li><button id= "about">About</button></li>
+            <li><a class = "active" id = "home">Home</a></li>
+            <li><a id = "gallery">Gallery</a></li>
+            <li><a id= "about">About</a></li>
            </ul> <br><br>
           <h1>Concept PROJΣCT S.I.G.M.A.</h1>
           <div id="galleryModal" class="modal">
