--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <div id = "intro">
           <ul>
             <li><a class = "active" id = "home">Home</a></li>
-            <li id = "gallery"><a>Gallery</a></li>
+            <li id = "gallerybtn"><a>Gallery</a></li>
             <li><a id= "about">About</a></li>
            </ul> <br><br>
           <h1>Concept PROJΣCT S.I.G.M.A.</h1>
