--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
     <head>
         <title>Concept PROJΣCT S.I.G.M.A.</title>
         <link rel="stylesheet" type="text/css" href="sigma.css">
+        <script src = "sigma.js"></script>
     </head>
     <body>
-      <script src = "sigma.js"></script>
       <div id = "intro">
           <ul>
             <li><a class = "active" id = "home">Home</a></li>
-              <li><a><button id = "btn">Gallery</button></a></li>
+             <li id = "btn"><a>Gallery</a></li>
             <li><a id= "about">About</a></li>
            </ul> <br><br>
           <h1>Concept PROJΣCT S.I.G.M.A.</h1>
