--- a/index.html
+++ b/index.html
@@ -13,11 +13,20 @@
            </ul> <br><br>
           <h1>Concept PROJΣCT S.I.G.M.A.</h1>
           <div id="myModal" class="modal">
-              <div class="modal-content">
-                  <span class="close">&times;</span>
-                  <p>Some text in the Modal..</p>
-              </div>
-          </div> 
+			<div class="modal-content">
+				<span class="close">&times;</span>
+				<div id="howTo">
+					<h2>How-To</h2>
+					<p>The insructions on how to play Cleaning the City are very simple, as demonstrated below:</p>
+					<ol>
+						<li class="floatLeft">Round 1: Pick up all 45 items of recyclable material and trash by clicking on each item.</li>
+						<li class="floatLeft">Round 2: Organize all of the items into the correct bin/bag by clicking and dragging each item.</li>
+						<li class="floatLeft">Round 3: Fill in the potholes and cracks on the road and sidewalk by simply moving your crusor around the screen where these potholes and cracks are. Once you are done, press the done button.</li>
+						<li class="floatLeft">Round 4: Replace all the missing bricks in the building. Once you are done, press the done button.</li>
+					</ol>
+				</div>
+			</div>
+		</div>
           <img src= "20170606_150804_HDR.jpg" width = "100%"> <br>
           <h2>This is Concept Project S.I.G.M.A. (Smart Innovative Geographically Manipulated Assistant). Concept Project S.I.G.M.A. has the main goal of making daily tasks easier for senior citizens, people with disabilities, or others who need it. These tasks can range from bringing items to the user, to waking them up in the morning. The possibilities are endless, and will fulfill the user's desire.</h2>
         </div>
