--- a/index.html
+++ b/index.html
@@ -1,55 +1,33 @@
-<DOCTYPE html>
-    <html>
-
-    <head>
-        <title>G4C Website</title>
-        <meta charset=“utf-8”>
-    </head>
-
-    <body id="home">
-        <ul class="navbar">
-            <li class="navbarItem"><a href="#home">Home</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Concept PROJΣCT S.I.G.M.A.</title>
+    <link href="sigma.css" rel="stylesheet" type="text/css">
+    <script src="sigma.js">
+    </script>
+</head>
+<body>
+    <div id="intro">
+        <ul>
+            <li>
+                <a class="active" id="home">Home</a>
             </li>
-            <li class="navbarItem" id="myBtn"><a href="#howTo">How-To &#9776</a>
+            <li id="btn">
+                <a>Gallery</a>
             </li>
-            <li class="navbarItem" style="float:right"><a class="active" href="#about">About</a>
+            <li>
+                <a id="about">About</a>
             </li>
-        </ul>
+        </ul><br>
         <br>
-        <br>
-        <h1>cleaning the city: a serious game</h1>
-        <table>
-            <tr>
-                <th>
-                    <a href="https://scratch.mit.edu/projects/143983877/" target="_blank"><img src="" alt="Game link"></a>
-                </th>
-                <th>
-                    <h2>Cleaning the City is a game that is supposed to show some of the problems that arise in the large cities that some of us live in. Throughout the game, the player does his or her best to fix these problems to bring the city to a cleaner and safer state.</h2>
-                </th>
-            </tr>
-        </table>
-        <br>
-        <br>
-        <br>
-        <div id="myModal" class="modal">
+        <h1>Concept PROJΣCT S.I.G.M.A.</h1>
+        <div class="modal" id="myModal">
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <div id="howTo">
-                    <h2>How-To</h2>
-                    <p>The insructions on how to play Cleaning the City are very simple, as demonstrated below:</p>
-                    <ol>
-                        <li class="floatLeft">Round 1: Pick up all 45 items of recyclable material and trash by clicking on each item.</li>
-                        <li class="floatLeft">Round 2: Organize all of the items into the correct bin/bag by clicking and dragging each item.</li>
-                        <li class="floatLeft">Round 3: Fill in the potholes and cracks on the road and sidewalk by simply moving your crusor around the screen where these potholes and cracks are. Once you are done, press the done button.</li>
-                        <li class="floatLeft">Round 4: Replace all the missing bricks in the building. Once you are done, press the done button.</li>
-                    </ol>
-                </div>
+		<p>hi</p>
             </div>
-        </div>
-        <div id="about" class="blackBox">
-            <h2>About</h2>
-            <p>Our game, Cleaning the City, is based around Smarter and Future Cities. It is supposed to show the many problems that arise in large cities that are yet to be resolved, and how some work (and in the real world, help from friends), can fix these problems. Some of the problems that are presented are littering, and the condition of roadways, sidewalks, and buildings. The game is made in a series of four levels, each with the instructions being given by the narrator. The first level requires the player to pick up all 45 pieces of recyclable and garbage material by simply clicking on each piece. The second level requires the player to organize the garbage or recyclable materials into the appropriate bin. Once this is done, the player moves onto the third level where he or she patches up potholes and cracks that were caused by erosion of roadways and sidewalks. Once the player patches the potholes and cracks, he or she has to press the done button. The fourth and final level requires the player to replace and fill in the missing bricks in the surrounding buildings, and once done to then press the done button to finish the fourth level and the game.</p>
-        </div>
-    </body>
-
-    </html>
+        </div><img src="20170606_150804_HDR.jpg" width="100%"><br>
+        <h2>This is Concept Project S.I.G.M.A. (Smart Innovative Geographically Manipulated Assistant). Concept Project S.I.G.M.A. has the main goal of making daily tasks easier for senior citizens, people with disabilities, or others who need it. These tasks can range from bringing items to the user, to waking them up in the morning. The possibilities are endless, and will fulfill the user's desire.</h2>
+    </div>
+</body>
+</html>
