--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
 <head>
     <title>Concept PROJΣCT S.I.G.M.A.</title>
     <link href="sigma.css" rel="stylesheet" type="text/css">
-    <script src="sigma.js">
-    </script>
 </head>
 <body>
     <div id="intro">
@@ -21,6 +19,7 @@
         </ul><br>
         <br>
         <h1>Concept PROJΣCT S.I.G.M.A.</h1>
+	<script src = "sigma.js"></script>
         <div class="modal" id="myModal">
             <div class="modal-content">
                 <span class="close">&times;</span>
