--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <li>
                 <a class="active" id="home">Home</a>
             </li>
-            <li id="btn">
+            <li id="myBtn">
                 <a>Gallery</a>
             </li>
             <li>
