--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ConceptPROJΣCT S.I.G.M.A.</title>
+    <title>Concept PROJΣCT S.I.G.M.A.</title>
     <link href="sigma.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -11,7 +11,7 @@
                 <a class="active" id="home">Home</a>
             </li>
             <li id="myBtn">
-                <a>Gallery</a>
+                Gallery
             </li>
             <li>
                 <a id="about">About</a>
