--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             <li>
                 <a class="active" id="home">Home</a>
             </li>
-            <li id="myBtn">
-                Gallery
+            <li>
+                <button id="myBtn">Gallery</button>
             </li>
             <li>
                 <a id="about">About</a>
