--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <div id="intro">
         <ul>
             <li>
-                <a class="active" id="home">Home</a>
+                <a class="active" href = "#home">Home</a>
             </li>
             <li>
-                <button id="myBtn">Gallery</button>
+                <a href = "#gallery">Gallery</a>
             </li>
             <li>
-                <a id="about">About</a>
+                <a href = "#about">About</a>
             </li>
         </ul><br>
         <br>
