--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <link href="sigma.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div id="intro">
-        <ul>
+    <ul>
             <li>
                 <a class="active" href = "#home">Home</a>
             </li>
@@ -15,18 +14,23 @@
             </li>
             <li>
                 <a href = "#about">About</a>
-            </li>
-        </ul><br>
+			</li>
+    </ul>
+	<div id="home">
+		<br>
         <br>
         <h1>Concept PROJΣCT S.I.G.M.A.</h1>
-	<script src = "sigma.js"></script>
-        <div class="modal" id="myModal">
-            <div class="modal-content">
-                <span class="close">&times;</span>
-		<p>hi</p>
-            </div>
-        </div><img src="20170606_150804_HDR.jpg" width="100%"><br>
+		<script src = "sigma.js"></script>
+		<img src="20170606_150804_HDR.jpg" width="100%"><br>
         <h2>This is Concept Project S.I.G.M.A. (Smart Innovative Geographically Manipulated Assistant). Concept Project S.I.G.M.A. has the main goal of making daily tasks easier for senior citizens, people with disabilities, or others who need it. These tasks can range from bringing items to the user, to waking them up in the morning. The possibilities are endless, and will fulfill the user's desire.</h2>
     </div>
+	<div id = "gallery">
+		<center>
+			<img src = "20170403_152536_HDR.jpg" width = "40%">
+			<img src = "20170403_152536_HDR (2).jpg " width = "40%"> <br>
+			<img src = "20170403_151206_Pano.jpg" width = "40%">
+			<img src = "20170606_150804_HDR.jpg " width = "40%">
+		</center>
+	</div>
 </body>
 </html>
