--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
     </div>
 	<div id = "gallery">
 		<center>
-			<img src = "20170403_152536_HDR.jpg" width = "40%">
+			<img src = "20170403_152536_HDR.jpg" width = "40%" style="image-orientation: 90deg;">
 			<img src = "20170403_152536_HDR (2).jpg " width = "40%"> <br>
+			<p>Concept PROJΣCT S.I.G.M.A. (Alpha)</p><br>
 			<img src = "20170403_151206_Pano.jpg" width = "40%">
-			<img src = "20170606_150804_HDR.jpg " width = "40%">
+			<img src = "20170606_150804_HDR.jpg " width = "40%"><br>
+			<p>Concept PROJΣCT S.I.G.M.A. (Alpha)</p>
+			<p>Concept PROJΣCT S.I.G.M.A. (Beta)</p><br>
 		</center>
 	</div>
 </body>
