--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			<p>Concept PROJΣCT S.I.G.M.A. (Alpha)</p><br>
 			<img src = "20170403_151206_Pano.jpg" width = "40%">
 			<img src = "20170606_150804_HDR.jpg " width = "40%"><br>
-			<p>Concept PROJΣCT S.I.G.M.A. (Alpha)</p>
-			<p>Concept PROJΣCT S.I.G.M.A. (Beta)</p><br>
+			<p style = "display: inline-block;">Concept PROJΣCT S.I.G.M.A. (Alpha)</p>
+			<p style = "display: inline-block; text-indent: 100px;">Concept PROJΣCT S.I.G.M.A. (Beta)</p><br>
 		</center>
 	</div>
 </body>
