--- a/index.html
+++ b/index.html
@@ -25,14 +25,13 @@
         <h2>This is Concept Project S.I.G.M.A. (Smart Innovative Geographically Manipulated Assistant). Concept Project S.I.G.M.A. has the main goal of making daily tasks easier for senior citizens, people with disabilities, or others who need it. These tasks can range from bringing items to the user, to waking them up in the morning. The possibilities are endless, and will fulfill the user's desire.</h2>
     </div>
 	<div id = "gallery">
+		<h2>Gallery</h2>
 		<center>
-			<img src = "20170403_152536_HDR.jpg" width = "40%" style="image-orientation: 90deg;">
-			<img src = "20170403_152536_HDR (2).jpg " width = "40%"> <br>
+			<img src = "20170403_152536_HDR (2).jpg " width = "40%">
+			<img src = "20170403_151206_Pano.jpg" width = "40%"> <br>
 			<p>Concept PROJΣCT S.I.G.M.A. (Alpha)</p><br>
-			<img src = "20170403_151206_Pano.jpg" width = "40%">
-			<img src = "20170606_150804_HDR.jpg " width = "40%"><br>
-			<p style = "display: inline-block;">Concept PROJΣCT S.I.G.M.A. (Alpha)</p>
-			<p style = "display: inline-block; text-indent: 100px;">Concept PROJΣCT S.I.G.M.A. (Beta)</p><br>
+			<img src = "20170606_150804_HDR.jpg " width = "80%"><br>
+			<p>Concept PROJΣCT S.I.G.M.A. (Beta)</p><br>
 		</center>
 	</div>
 </body>
