--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
                 <a href = "#gallery">Gallery</a>
             </li>
             <li>
-                <a href = "#about">About</a>
-			</li>
+                <a href = "#info">Information</a>
+	    </li>
+	    <li>
+		<a href = "#about">About</a>
+	    </li>
     </ul>
 	<div id="home">
 		<br>
@@ -32,6 +35,13 @@
 			<p>Concept PROJΣCT S.I.G.M.A. (Alpha)</p><br>
 			<img src = "20170606_150804_HDR.jpg " width = "80%"><br>
 			<p>Concept PROJΣCT S.I.G.M.A. (Beta)</p><br>
+		</center>
+	</div>
+	<div id = "info">
+		<center>
+			<h2>Information</h2>
+			<h3>Features:</h3> 
+			<p>Pick-up function to bring items to the user. <br> Tray object identifier. <br> Temperature detector with warning LED. <br> Water detector with warning LED. <br> Red stop line detection.</p>
 		</center>
 	</div>
 </body>
