--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
 	<div id = "gallery">
 		<center>
-			<h2>Gallery</h2>
+			<h1>Gallery</h1>
 			<img src = "20170403_152536_HDR (2).jpg " width = "40%">
 			<img src = "20170403_151206_Pano.jpg" width = "40%"> <br>
 			<p>Concept PROJΣCT S.I.G.M.A. (Alpha)</p><br>
@@ -39,9 +39,9 @@
 	</div>
 	<div id = "info">
 		<center>
-			<h2>Information</h2>
-			<h3>Features:</h3> 
-			<p>Pick-up function to bring items to the user. <br> Tray object identifier. <br> Temperature detector with warning LED. <br> Water detector with warning LED. <br> Red stop line detection.</p>
+			<h1>Information</h1>
+			<h2>Features:</h2> 
+			<p style = "font-size: 40px">Pick-up function to bring items to the user. <br> Tray object identifier. <br> Temperature detector with warning LED. <br> Water detector with warning LED. <br> Red stop line detection.</p>
 		</center>
 	</div>
 </body>
