--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<img src = "20170403_151206_Pano.jpg" width = "40%"> <br>
 			<p>Concept PROJΣCT S.I.G.M.A. (Alpha)</p><br>
 			<img src = "20170606_150804_HDR.jpg " width = "80%"><br>
-			<p>Concept PROJΣCT S.I.G.M.A. (Beta)</p><br>
+			<p>Concept PROJΣCT S.I.G.M.A. (Beta)</p>
 		</center>
 	</div>
 	<div id = "info">
@@ -42,6 +42,10 @@
 			<h1>Information</h1>
 			<h2>Features:</h2> 
 			<p style = "font-size: 40px">Pick-up function to bring items to the user. <br> Tray object identifier. <br> Temperature detector with warning LED. <br> Water detector with warning LED. <br> Red stop line detection.</p>
+			<h2>Purpose of the Features</h2> <br>
+			<h3>(Respective to the order of the features above)</h3>
+			<p style = "font-size: 40px">Allows the easy transportation of items like medication, water, and food to the user. <br> Allows S.I.G.M.A. to identify what is on the tray based on the tray identification feature. <br> Gives the temperature to the user incase major heat causes heat strokes for that person. <br> Prevents the robot from running into puddles and breaking down due to a short circuit. (Robot protection) <br> The robot will stop at red tape as it signifies a dangerous or off limit area. (Safety and privacy protection)
+
 		</center>
 	</div>
 </body>
