--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
 		<center>
 			<h1>Information</h1>
 			<h2>Features:</h2>
-			<li>
-				<ul> style = "font-size: 20px">Pick-up function to bring items to the user. <br> Tray object identifier. <br> Temperature detector with warning LED. <br> Water detector with warning LED. <br> Red stop line detection.</ul>
-			</li>
+			<p style = "font-size: 20px">Pick-up function to bring items to the user. <br> Tray object identifier. <br> Temperature detector with warning LED. <br> Water detector with warning LED. <br> Red stop line detection.</p>
 			<h2>Purpose of the Features:</h2>
 			<h3>(Respective to the order of the features above)</h3>
 			<p style = "font-size: 20px">Allows the easy transportation of items like medication, water, and food to the user. <br> Allows S.I.G.M.A. to identify what is on the tray based on the tray identification feature. <br> Gives the temperature to the user incase major heat causes heat strokes for that person. <br> Prevents the robot from running into puddles and breaking down due to a short circuit. (Robot protection) <br> The robot will stop at red tape as it signifies a dangerous or off limit area. (Safety and privacy protection)
