--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 </head>
 <body>
     <ul>
-            <li>
+            <li class = "navbar">
                 <a class="active" href = "#home">Home</a>
             </li>
-            <li>
+            <li class = "navbar">
                 <a href = "#gallery">Gallery</a>
             </li>
-            <li>
+            <li class = "navbar">
                 <a href = "#info">Information</a>
 	    </li>
-	    <li>
+	    <li class = "navbar">
 		<a href = "#about">About</a>
 	    </li>
     </ul>
