--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="sigma.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <ul>
+    <ul class = "navtop">
             <li class = "navbar">
                 <a class="active" href = "#home">Home</a>
             </li>
