--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 			<h2>Important Facts:</h2>
 			<p>Built for one half of the year, the robot was built as a prototype assistant for people who are less fortunate. Using a lego EV3, the group that made me (S.I.G.M.A) turned the robot into a household delivery bot. Right now, what it could do is deliver items from one part of the house to the other using markers. This way, people who for some reason need assistance to get items from another room could get it anytime easily.<p>
 		</center>
-		<p>Example of uses:</p>
+		<h2>Example of uses:</h2>
 		<ol>
 			<li>If a nurse is gone, robot could deliver food.</li>
 			<li>The nurse does not have to stay and could leave things for person. Then, once they want it, they could just order it from the robot.</li>
 			<li>The person who is being served could get certain items from certain rooms whenever they want it.</li>
 		</ol>
-		<p>Extra info:</p>
+		<h2>Extra info:</h2>
 		<ul>
 			<li>This is not a complete robot and is not ready to be used in homes.</li>
 			<li>Markers need to be included to guide the robot. It serves as a path, and the robot will only follow it to certain places depending on the order it is following from the user’s remote.</li>
@@ -62,6 +62,13 @@
 			<li>The robot will have a temperature sensor to make sure the household temperatures are good to live in. If the house is too cold or hot, the robot will alert the user to turn down or up the temperature.</li>
 			<li>The robot is designed to not go to any ‘stop zone’.</li>
 		</ul>
+	</div>
+	<div id = "about">
+		   <center>
+			   <h1>About</h1>
+			   <h2>Contributors:</h2>
+			   <p>Amar M<br>Ben B<br>Ishita G<br>CJ D<br>Attila H<br>Ryan E<br>Mabel C<br>Bryan W<br>Hannah R</p>
+		</center>
 	</div>
 </body>
 </html>
