--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 	    <li class = "navbar">
 		<a href = "#about">About</a>
 	    </li>
+	    <li class = "navbar" style = "text-alignment: right;">
+		    <a href = "http://emoti-con.org">Emoti-Con 2017 Project</a>
+	    </li>
     </ul>
 	<div id="home">
 		<br>
