--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	    <li class = "navbar">
 		<a href = "#about">About</a>
 	    </li>
-	    <li class = "navbar" style = "text-alignment: right;">
+	    <li class = "navbar" style = "text-align: right;">
 		    <a href = "http://emoti-con.org">Emoti-Con 2017 Project</a>
 	    </li>
     </ul>
