--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 		<a href = "#about">About</a>
 	    </li>
 	    <li class = "navbar" style = "float: right;">
-		    <a href = "http://emoti-con.org">Emoti-Con 2017 Project</a>
+		<a href = "http://q-quad.github.io">Quad DEVELOPMENT Project</a>
+	    <li class = "navbar" style = "float: right;">
+		<a href = "http://emoti-con.org">Emoti-Con 2017 Project</a>
 	    </li>
     </ul>
 	<div id="home">
